# Simple-Web-Server

./: .gitignore  CMakeLists.txt  README.md  client_http.hpp  client_https.hpp  http_examples.cpp  https_examples.cpp  server_http.hpp  utility.hpp
tests/: CMakeLists.txt  io_test.cpp  parse_test.cpp  status_code_test.cpp
